<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_sheet_transaction_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_transaction_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rg_transaction_type_background"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/rb_transaction_type_bg"
            android:button="@null"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/expense"
            android:checked="true"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/rb_transaction_type_bg"
            android:button="@null"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/income"
            android:textSize="20sp" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_transaction_type" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_new_transaction_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_categories">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sum"
            android:inputType="number"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_new_transaction_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/til_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/til_sum"
        tools:text="CUR"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm_new_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_transaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_sum" />

</androidx.constraintlayout.widget.ConstraintLayout>
